# mkdoc-site

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: gh-page.yml
practices/web/: index.html
quick_start/: index.html
search/: search_index.json
web/: index.html
