[tool.poetry]
name = "mkdoc-github-io"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mkdoc"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
